# python-actions-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_with_cache_matrix_coverage.yml  project_test_with_pip.yml  project_tests.yml  quality_control_workflow.yml  tests_with_matrix_and_coverage.yml  tests_with_pip.yml  tests_with_poetry.yml
python_actions_demo/: models.py
src/: models.py
tests/: conftest.py
tests/book/: book_better_test.py  book_parametrize_test.py  book_test.py
