[project]
name = "python-actions-demo"
version = "0.1.0"
description = "Configuration samples with actions for Python projects."
license = "MIT"
authors = [
    {name = "dmitry",email = "uraev.dima@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "book: Book tests",
    "library: Library tests",
    "slow: Slow tests to exclude from CI",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.5,<0.16.0)",
    "black (>=26.3.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
